@@ -232,6 +232,9 @@ fix_quicksave_during_feather = true
 ; If you are using the caped prince graphics, and crouch with your back towards a closed gate on the left edge on the room, then the prince will slide through the gate.
 fix_caped_prince_sliding_through_gate = true
 
+; Guards become inactive if they are standing on a door top (with floor), or if the prince is standing on a door top.
+fix_doortop_disabling_guard = true
+
 
 [CustomGameplay]
 ; Turn on customization options.
