@@ -368,6 +368,7 @@ void options_process_fixes(SDL_RWops* rw, rw_process_func_type process_func) {
 	process(fixes_options_replay.fix_exit_door);
 	process(fixes_options_replay.fix_quicksave_during_feather);
 	process(fixes_options_replay.fix_caped_prince_sliding_through_gate);
+	process(fixes_options_replay.fix_doortop_disabling_guard);
 }
 
 void options_process_custom_general(SDL_RWops* rw, rw_process_func_type process_func) {
