@@ -660,9 +660,11 @@ Possible results in can_guard_see_kid:
 		can_guard_see_kid = 2;
 		left_pos = x_bump[Kid.curr_col + 5] + 7;
 #ifdef FIX_DOORTOP_DISABLING_GUARD
-		// When the kid is hanging on the right side of a doortop, Kid.curr_col points at the doortop tile and a guard on the left side will see the prince.
-		// This fixes that.
-		if (Kid.action == actions_2_hang_climb || Kid.action == actions_6_hang_straight) left_pos += 14;
+		if (fixes->fix_doortop_disabling_guard) {
+			// When the kid is hanging on the right side of a doortop, Kid.curr_col points at the doortop tile and a guard on the left side will see the prince.
+			// This fixes that.
+			if (Kid.action == actions_2_hang_climb || Kid.action == actions_6_hang_straight) left_pos += 14;
+		}
 #endif
 		//printf("Kid.curr_col = %d, Kid.action = %d\n", Kid.curr_col, Kid.action);
 		right_pos = x_bump[Guard.curr_col + 5] + 7;
@@ -678,7 +680,7 @@ Possible results in can_guard_see_kid:
 		// A gate is on the right side of a tile, so it doesn't count.
 		if (get_tile_at_kid(right_pos) == tiles_4_gate
 #ifdef FIX_DOORTOP_DISABLING_GUARD
-			|| get_tile_at_kid(right_pos) == tiles_7_doortop_with_floor || get_tile_at_kid(right_pos) == tiles_12_doortop
+			|| (fixes->fix_doortop_disabling_guard && (get_tile_at_kid(right_pos) == tiles_7_doortop_with_floor || get_tile_at_kid(right_pos) == tiles_12_doortop))
 #endif
 		) {
 			right_pos -= 14;
