@@ -1217,6 +1217,7 @@ typedef struct fixes_options_type {
 	byte fix_exit_door;
 	byte fix_quicksave_during_feather;
 	byte fix_caped_prince_sliding_through_gate;
+	byte fix_doortop_disabling_guard;
 } fixes_options_type;
 
 #define NUM_GUARD_SKILLS 12
